# rent_scraper_handoff

./: .gitignore  INSTRUCTIONS.md  README.md
.claude/: settings.json
HANDBOOK/08-engineering-requirements/: README.md  code-quality-standards.md  complexity-and-context.md  logging-observability-richness.md
agent/: .gitignore  CONTRACT.md  Dockerfile  Dockerfile.dockerignore  README.md  dev_run.py  hub_client.py  main.py  pairing.py  requirements.txt  runtime.py  tray.py
agent/handlers/: comps.py  tricon12.py
agent/tests/: conftest.py  test_runtime.py
app/: .gitignore  .vercelignore  README.md  app.js  authorize.html  build_data.py  config.js  data.js  index.html  styles.css  supabase-scrape.js  vercel.json  xlsx.js
app/test/: verify-xlsx.js
code/: .env.example  README.md  config.py  conftest.py  database.py  extractor.py  fetcher.py  jobstore.py  local_scrapes.db  local_server.py  main.py  pipeline.py  pyproject.toml  requirements.txt  worker.py
code/fixtures/: README.md
code/sites/: 185_enfield.json  4point3.json  _TEMPLATE.json  akoya_living.json  archetype_residences.json  avia_2.json  bleury.json  college_west.json  elm_ledbury.json  limelight_condos.json  lnx_residences.json  mirage_condominium.json  mirvish_village.json  story_of_midtown.json  the_diamond.json  the_exchange.json  the_selby.json  trilogy_on_king.json  vie_apartments.json
code/tests/: test_extractor.py  test_fetcher.py
code/tests/fixtures/: tricon_olequotesheet_12mo.html  tricon_olequotesheet_missing.html
code/tools/: _batch_split.py  debug_url.py  export_comp_buildings.py  geocode_buildings.py
db/: export_seed.py  schema.sql
db/migrations/: 0001_scrape_jobs_and_workers.sql  0002_website_cancel.sql  0003_worker_role_grant.sql  (+1 more)
design/: IMPROVEMENTS.md  TWO_TIER_CONFIG.md
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  DATA_STORAGE.md  FRONTEND.md  SCRAPING_TECHNIQUES.md  SITE_CONFIG_REFERENCE.md
js_configs_for_repo/: college_west.json  concorde.json  le_livmore.json  livmore.json  lnx_residences.json  m_city_phase_1.json  mille_carre.json  one_park_tower.json  parker.json  signal.json  solstice_condos.json  stak36.json  story_of_midtown.json  the_millway.json  west_house.json  xo_condos.json
(+173 files in other folders)
