# Scraper — Fitzrovia comp-tracker scraper
#
# This file replaces requirements.txt as the single source of truth for
# dependencies, lint config, type-check config, and test config.
#
# requirements.txt is kept temporarily for tooling that doesn't read
# pyproject.toml; regenerate it with `pip-compile pyproject.toml` if needed.

[project]
name = "fitzrovia-scraper"
version = "0.1.0"
description = "Comp-tracker scraper — Playwright fetch + Claude API extraction → Supabase"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Fitzrovia Real Estate Inc." }]

dependencies = [
    "anthropic>=0.25.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "curl_cffi>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
fitz-scraper = "main:cli"

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

# ── ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".chrome_profiles",
    "debug_screenshots",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-too-long — handled by formatter
]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # Playwright/anthropic stubs are partial
exclude = [
    "venv/",
    "tools/",   # debug scripts don't need strict typing
]
